--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,13 +9,13 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Education"
+  url = "#education"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Experience"
+  url = "#experience"
   weight = 30
 
 [[main]]
