--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,6 +24,16 @@
   weight = 40
 
 [[main]]
+  name = "Awards"
+  url = "#awards"
+  weight = 50
+
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 60
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
